--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.js-lib</groupId>
 	<artifactId>js-dom</artifactId>
-	<version>1.2.0</version>
+	<version>1.3.1</version>
 
 	<name>j(s)-lib DOM</name>
 	<description>Simplified DOM implementation based on W3C DOM</description>
@@ -124,12 +124,12 @@
 		<dependency>
 			<groupId>com.js-lib</groupId>
 			<artifactId>js-dom-api</artifactId>
-			<version>1.2</version>
+			<version>1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>nekohtml</groupId>
+			<groupId>net.sourceforge.nekohtml</groupId>
 			<artifactId>nekohtml</artifactId>
-			<version>1.9.6.2</version>
+			<version>1.9.22</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
