--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.js-lib</groupId>
 	<artifactId>js-dom</artifactId>
-	<version>1.2.1</version>
+	<version>1.2.0-SNAPSHOT</version>
 
 	<name>j(s)-lib DOM</name>
 	<description>Simplified DOM implementation based on W3C DOM</description>
@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>com.js-lib</groupId>
 			<artifactId>js-dom-api</artifactId>
-			<version>1.2</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>net.sourceforge.nekohtml</groupId>
@@ -139,10 +139,23 @@
 		</dependency>
 	</dependencies>
 
+	<repositories>
+		<repository>
+			<id>js-lib</id>
+			<url>http://maven.js-lib.com/</url>
+		</repository>
+	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>js-lib</id>
+			<url>http://maven.js-lib.com/</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<distributionManagement>
 		<snapshotRepository>
-			<id>ossrh</id>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<id>js-lib</id>
+			<url>http://maven.js-lib.com/</url>
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
