--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.js-lib</groupId>
 	<artifactId>js-dom</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.2.0</version>
 
 	<name>j(s)-lib DOM</name>
 	<description>Simplified DOM implementation based on W3C DOM</description>
@@ -157,6 +157,5 @@
 			<id>js-lib</id>
 			<url>http://maven.js-lib.com/</url>
 		</repository>
-	</distributionManagement>
-	
+	</distributionManagement>	
 </project>
